# ai-write

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tauri.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/agents/: commercial-writer.agent.md  general-assistant.agent.md  java-modernization.agent.md
.github/agents/context/: README.md
data/: ai-write.db
docs/: API.md  ARCHITECTURE.md  COMPONENT_MAP.md  DEVELOPMENT.md  ROADMAP.md  THEME.md
e2e/: home.spec.ts  navigation.spec.ts  novel.spec.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: ai-write.db
src-tauri/src/: commands.rs  database.rs  lib.rs
src/api/: ai.ts  character.ts  client.ts  index.ts  knowledge.ts  localStorage.ts  migration.ts  novel.ts  quota.ts  repository.ts  sqlite.ts  text.ts  user.ts
src/assets/styles/: global.css  theme.ts
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/modal/: LoginModal.tsx
src/hooks/: index.ts  useAuth.ts  useAutoSave.ts  useDebounce.ts  useTheme.ts
src/router/: index.tsx
src/store/: sqliteStore.ts  useAppStore.ts  useCharacterStore.ts  useGlossaryStore.ts  useKnowledgeStore.ts  useNovelStore.ts  useUserStore.ts
src/types/: entities.ts  index.ts  novel.ts  react-quill.d.ts  user.ts
src/utils/: crypto.ts  format.ts  index.ts
tests/: TEST_PLAN.md  TEST_REPORT.md
workflow/completed/: README.md
workflow/todo/: README.md
(+38 files in other folders)
